# self-rec-research

./: .gitignore  README.md  pyproject.toml
experiments/00_data_gen/: config.yaml
experiments/COLM_01_AT_PW-C_Rec_NPr_FA_Inst/: config.yaml
experiments/COLM_02_AT_IND-C_Rec_NPr_FA_Inst/: config.yaml
experiments/COLM_03_UT_PW-Q_Rec_NPr_CoT_Rsn/: config.yaml
experiments/COLM_04_UT_PW-Q_Rec_NPr_FA_Rsn/: config.yaml
experiments/_T01_tutorial_evals/: config.yaml
experiments/_scripts/: utils.py
experiments_eval/00_data_gen/: config.yaml  config_wikisum_ica.yaml
experiments_eval/ICA/: run_all_llama.sh  run_all_new_experiments.sh  run_all_wikisum.sh
experiments_training/: runpod_a100.yaml
experiments_training/_data_processing/: icml_01_pw_all.yaml  prepare.sh
experiments_training/_tutorial/: config.yaml  config_runpod.yaml  prepare_data.yaml  run.sh  run_runpod.sh  runpod_community.yaml
gpu_configs/: runpod_large.yaml  runpod_medium.yaml  runpod_small.yaml
results/tutorial_sft_pw__20260318_131717/: metadata.json  status.json
results/tutorial_sft_pw__20260318_132512/: config.yaml  status.json
scripts/: README_generate_figures.md  copy_figures.sh  generate_figures.sh  run.sh  upload_HF_data.py
scripts/alpaca_eval/: analyze_adversarial_SGTR.py  analyze_self_preference.py  analyze_uplift.py  generate_outputs.py  run_self_preference.py  runpod_dispatch.py  training_runs.py
scripts/eval/: tinker_eval_sweep.py
scripts/figures/: prototype_compact_figures.py  prototype_uplift_figures.py
scripts/ica/: analyze_ica.py  direct_generate.py
scripts/mmlu/: analyze_mmlu_ica.py  generate_mmlu_ica_configs.py  prepare_mmlu_data.py
scripts/msj/: aggregate_analysis.py  analyze_results.py  generate_training_data.py  rescore_results.py  run_attack.py  tinker_target.py
scripts/training/: prepare_data.py
scripts/utils/: expand_config_models.py  generate_figures.sh  retry.sh  (+2 more)
(+2731 files in other folders)
