 [build-system]
 requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "self-rec-research"
 version = "0.0.1"
 description = "Research experiments built on top of the self-rec-framework."
 requires-python = ">=3.11"
 dependencies = [
    "self-rec-framework",
]

[tool.uv.sources]
self-rec-framework = { path = "_external/self-rec-framework", editable = true }

[tool.setuptools]
packages = []

