 [build-system]
 requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "self-rec-research"
 version = "0.0.1"
 description = "Research experiments built on top of the self-rec-framework."
 requires-python = ">=3.12"
 dependencies = [
    "self-rec-framework",
    "sgtr-rl",
    "alpaca-eval",
    "tinker",
    "tinker-cookbook",
    # CUDA deps pinned to match torch's cu12 requirements
    "nvidia-cusparselt-cu12>=0.8",
    "nvidia-nvshmem-cu12>=3.6",
    "setuptools<81",
]

[tool.uv.sources]
self-rec-framework = { path = "_external/self-rec-framework", editable = true }
sgtr-rl = { path = "_external/SGTR-RL", editable = true }

[tool.setuptools.packages.find]
include = ["scripts*"]
